# router/app.go
@@ -22,9 +22,14 @@ func Router() *gin.Engine {
 	// 首页
 	r.GET("/", service.GetIndex)
 	r.GET("/index", service.GetIndex)
-	r.GET("/toRegister", service.ToRegister) // 用户注册
-	r.GET("/toChat", service.ToChat)
-	r.POST("/contact/addFriend", service.AddFriend)
+	r.GET("/toRegister", service.ToRegister)        // 用户注册
+	r.GET("/toChat", service.ToChat)                // 聊天页面
+	r.POST("/contact/addFriend", service.AddFriend) // 添加好友页面
+	r.POST("/searchFriends", service.SearchFriends) // 返回好友列表
+	// 群
+	r.POST("/contact/createCommunity", service.CreateCommunity) //创建群
+	r.POST("/contact/loadcommunity", service.LoadCommunity)     //群列表
+	r.POST("/contact/joinGroup", service.JoinGroups)            // 添加群聊
 	// 用户模块
 	r.POST("/user/createUser", service.CreateUser) // 增加用户
 	r.POST("/user/getUserList", service.GetUserList)
@@ -32,7 +37,7 @@ func Router() *gin.Engine {
 	r.POST("/user/updateUser", service.UpdateUser)
 	r.POST("/user/findUserByNameAndPwd", service.FindUserByNameAndPwd)
 	r.POST("/user/login", service.FindUserByNameAndPwd)
-	r.POST("/searchFriends", service.SearchFriends)
+
 	// 发送消息
 	r.GET("/user/sendMsg", service.SendMsg)
 	r.GET("/user/sendUserMsg", service.SendUserMsg)
